[package]
name = "rust_tracer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-edit = "0.8.0"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.1"
glam = "0.19.0"
minifb = "0.19.3"
num_cpus = "1.13.0"
rand = "0.8.4"
rand_xoshiro = "0.6.0"
scoped_threadpool = "0.1.9"
